cmake_minimum_required(VERSION 3.8)
PROJECT (HELLO) 

MESSAGE(STATUS "This is BINARY dir" ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir" ${PROJECT_SOURCE_DIR})
MESSAGE(STATUS "This is BINARY dir" ${CMAKE_BINARY_DIR})

#set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output/lib)
#set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output/lib)
#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output/bin)

ADD_SUBDIRECTORY(src)

INSTALL(CODE "MESSAGE(\"Sample install message.\")")
INSTALL(DIRECTORY doc/ DESTINATION share/doc/cmake/t2)
INSTALL(PROGRAMS runhello.sh DESTINATION bin)
